Closed Bug 1731138 Opened 3 years ago Closed 3 years ago

Animated gif with mask-image not playing unless user is actively dragging mouse

Categories

(Core :: Layout, defect)

Firefox 91
Unspecified
All
defect

Tracking

()

VERIFIED FIXED
94 Branch
Tracking Status
firefox92 --- wontfix
firefox93 --- wontfix
firefox94 --- verified

People

(Reporter: nanewman01, Assigned: emilio)

References

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:91.0) Gecko/20100101 Firefox/91.0

Steps to reproduce:

  1. Use the mask-image property with a url to an animated GIF

Snippet used:
#content {
width: 200px;
height: 200px;
background-color: aqua;
-webkit-mask-clip: border-box;
-webkit-mask-size: 100% 100%;
-webkit-mask-image: url("./myGif.gif")
}
2) Or viewing the following codepen: https://codepen.io/NicolasNewman/pen/WNOdJMa

Actual results:

The animation only plays if I am actively holding down left click and dragging my mouse across the screen.

Expected results:

Since Chromium doesn't exhibit this behavior and the animation plays as expected, I'm assuming this isn't intended behavior.

Hi Nicolas,

I was able to reproduce the issue on Firefox Nightly 94.0a1 and Firefox 92.0

I'm setting a component in order to get the development team involved in reviewing it.

Thank you for reporting!

Status: UNCONFIRMED → NEW
Component: Untriaged → Layout
Ever confirmed: true
OS: Unspecified → All
Product: Firefox → Core

Otherwise we don't properly repaint animated images.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3aa4f09a896e
Invalidate WebRender mask data from css::ImageLoader. r=tnikkel
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

It's a very old regression, so I think it can probably ride the trains.

Flags: needinfo?(emilio)
Flags: qe-verify+

Confirmed issue with 94.0a1Build ID 20210916214506 on Win10 using TC from Emilio.
Fix verified with 94.0b2.

Based on Comment 8, I'm marking this issue as Verified Fixed.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: