Bug 1731138 - Invalidate WebRender mask data from css::ImageLoader. r=tnikkel

Otherwise we don't properly repaint animated images.

Differential Revision: https://phabricator.services.mozilla.com/D126093